// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oda-enrollment-android-applink should render form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-verify authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-verify"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-verify"
              >
                Okta Verify
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                clip-rule="evenodd"
                d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                fill="#00297A"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-7"
            >
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 okta-form-title o-form-head emotion-11"
                      data-se="o-form-head"
                      tabindex="-1"
                    >
                      Additional setup required to use Okta FastPass
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <fieldset
                    class="MuiFormControl-root MuiFormControl-marginNormal emotion-13"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-colorPrimary emotion-14"
                    >
                      On this device, do you already have an Okta Verify account for Widgico?
                    </label>
                    <div
                      class="MuiFormGroup-root emotion-15"
                      data-se="hasOVAccount"
                      id="hasOVAccount"
                      role="radiogroup"
                    >
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-16"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary emotion-17"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-18"
                            name="hasOVAccount"
                            type="radio"
                            value="no"
                          />
                          <span
                            class="emotion-19"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-20"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-21"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-22"
                        >
                          No, I don’t have an account
                        </span>
                      </label>
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-16"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary emotion-17"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-18"
                            name="hasOVAccount"
                            type="radio"
                            value="yes"
                          />
                          <span
                            class="emotion-19"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-20"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-28"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-22"
                        >
                          Yes, I already have an account
                        </span>
                      </label>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-31"
                    tabindex="0"
                    type="button"
                  >
                    Next
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`oda-enrollment-android-applink should render view when "No, I don’t have an account" is selected 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-verify authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-verify"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-verify"
              >
                Okta Verify
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                clip-rule="evenodd"
                d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                fill="#00297A"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-7"
            >
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 okta-form-title o-form-head emotion-11"
                      data-se="o-form-head"
                      tabindex="-1"
                    >
                      Set up an Okta Verify account
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                      data-se="o-form-explain"
                    >
                      To sign in with Okta FastPass, you’ll need to set up Okta Verify on this device.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-15"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <ol
                      class="MuiList-root MuiList-padding emotion-17"
                    >
                      <li
                        class="MuiListItem-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                If you don’t have Okta Verify installed, 
                                <a
                                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways download-ov-link emotion-23"
                                  href="https://play.google.com/store/apps/details?id=com.okta.android.auth"
                                  id="download-ov"
                                  target="_blank"
                                >
                                  download the app.
                                  <span
                                    class="Link-indicator"
                                    role="presentation"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-24"
                                      focusable="false"
                                      viewBox="0 0 16 16"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M13.2929 2H7.99998V1H14.5C14.7761 1 15 1.22386 15 1.5V8H14V2.70711L6.35353 10.3536L5.64642 9.64645L13.2929 2ZM1.5 4H1V4.5V14.5V15H1.5H11.5H12V14.5V8H11V14H2V5H8V4H1.5Z"
                                        fill="currentColor"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </a>
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                Open Okta Verify and follow the steps to add your account.
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                When prompted, choose Sign In, then enter the sign-in URL:
                              </p>
                            </div>
                          </div>
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                <span
                                  class="no-translate"
                                >
                                  https://idx.okta1.com
                                </span>
                              </p>
                            </div>
                          </div>
                          <div
                            class="MuiBox-root emotion-9"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-39"
                              tabindex="0"
                              type="button"
                            >
                              Copy sign-in URL to clipboard
                            </button>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root emotion-18"
                      >
                        Finish setting up your account in Okta Verify, then try signing in again.
                      </li>
                    </ol>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                    role="link"
                  >
                    Back
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`oda-enrollment-android-applink should render view when "Yes, I already have an account" is selected 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="siwContainer MuiBox-root emotion-2"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing MuiBox-root emotion-3"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-4"
          />
          <div
            aria-hidden="true"
            class="iconContainer mfa-okta-verify authCoinOverlay MuiBox-root emotion-5"
            data-se="factor-beacon"
          >
            <svg
              aria-labelledby="mfa-okta-verify"
              fill="none"
              height="48"
              role="img"
              viewBox="0 0 48 48"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="mfa-okta-verify"
              >
                Okta Verify
              </title>
              <circle
                class="siwFillBg"
                cx="24"
                cy="24"
                fill="#F5F5F6"
                r="24"
              />
              <path
                clip-rule="evenodd"
                d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                fill="#00297A"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-6"
        >
          <form
            class="o-form siwForm"
            data-se="o-form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-7"
            >
              <div
                class="MuiBox-root emotion-7"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 okta-form-title o-form-head emotion-11"
                      data-se="o-form-head"
                      tabindex="-1"
                    >
                      Additional setup required to use Okta FastPass
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                      data-se="o-form-explain"
                    >
                      Okta FastPass is a security method that can sign you in without needing your username.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-15"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 emotion-17"
                    >
                      Already have Okta FastPass enabled for your account?
                    </p>
                    <ul
                      class="MuiList-root MuiList-padding emotion-18"
                    >
                      <li
                        class="MuiListItem-root emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                Make sure your Okta Verify is up-to-date, then try signing in again.
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                If your device has a work profile, make sure you are signing in from the same profile that Okta Verify is installed in.
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                On certain browsers and applications, Okta FastPass is not supported.
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-15"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 emotion-17"
                    >
                      Need to set up Okta FastPass for your account?
                    </p>
                    <ol
                      class="MuiList-root MuiList-padding emotion-37"
                    >
                      <li
                        class="MuiListItem-root emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                On this device, open the Okta Verify app.
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                On the list of accounts, tap your account for https://idx.okta1.com.
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                Under the “Okta FastPass” section, tap Setup, then follow the instructions.
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-7"
                        >
                          <div
                            class="MuiBox-root emotion-15"
                          >
                            <div
                              class="MuiBox-root emotion-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-14"
                                data-se="o-form-explain"
                              >
                                After your setup is complete, return here to try signing in again.
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ol>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-59"
                    role="link"
                  >
                    Back
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</div>
`;
